fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
+html{
+    overflow-x:hidden;
+}
+
 body{
+    
     margin:0;
     padding:0;
     font-family:"Poppins";
